# KillSay-Rust

./: .gitignore  KillSay.spec  app.py  bump_version.py  config_manager.py  custom_themes.json  index.html  main.py  package-lock.json  package.json  resource_rc.py  resources.qrc  share_code.py  theme_config.json  theme_manager.py  utils.py  vite.config.ts
configs/: default.json  last_used.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  monitor.rs  updater.rs
src/assets/styles/: main.css
src/components/features/: ConfigEditor.vue  HistoryWindow.vue  ShareWindow.vue
src/components/layout/: TitleBar.vue
src/components/ui/: ColorPicker.vue  ConfirmDialog.vue  GeoElement.vue  GeoLine.vue  RingStat.vue
src/config/: app.ts
src/stores/: app.ts  config.ts  monitor.ts  theme.ts
src/types/: index.ts
src/views/: Home.vue  Settings.vue  StatsOverlay.vue  UpdateWindow.vue
