[package]
name = "killsay-tauri"
version = "0.9.99"
description = "Minecraft Kill Say Script"
authors = ["you"]
edition = "2021"

[lib]
name = "killsay_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
